--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -49,9 +49,9 @@ RUN echo "ClientAliveCountMax 0" >> /etc/ssh/sshd_config
 # ******************************************************************
 
 # Download a vulnerable version of FuelCMS (1.4.1 is vulnerable to CVE-2018-16763)
-RUN curl -L https://github.com/daylightstudio/FUEL-CMS/archive/refs/tags/1.4.1.zip -o /tmp/fuelcms-1.4.1.zip
-RUN unzip /tmp/fuelcms-1.4.1.zip -d /tmp/
-RUN mv /tmp/FUEL-CMS-1.4.1/* /var/www/html/ # Move to Apache's default web root
+RUN curl -L https://github.com/daylightstudio/FUEL-CMS/archive/refs/tags/1.4.1.zip -o /opt/fuelcms-1.4.1.zip
+RUN unzip /opt/fuelcms-1.4.1.zip -d /opt/
+RUN mv /opt/FUEL-CMS-1.4.1/* /var/www/html/ 
 
 # Set permissions for FuelCMS files
 RUN chown -R www-data:www-data /var/www/html/
