--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -11,14 +11,17 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/* && \
     curl \
     unzip \
     tar \
-    xmlstarlet 
+    xmlstarlet \
+    apt-transport-https \
+    gpg
 
 
-RUN mkdir -p /etc/apt/keyrings
 
-RUN wget -O - https://packages.adoptium.net/artifactory/api/gpg/key/public | tee /etc/apt/keyrings/adoptium.asc
+RUN wget -qO - https://packages.adoptium.net/artifactory/api/gpg/key/public | gpg --dearmor | tee /etc/apt/trusted.gpg.d/adoptium.gpg > /dev/null
 
-RUN echo "deb [signed-by=/etc/apt/keyrings/adoptium.asc] https://packages.adoptium.net/artifactory/deb $(awk -F= '/^VERSION_CODENAME/{print$2}' /etc/os-release) main" | tee /etc/apt/sources.list.d/adoptium.list
+
+RUN echo "deb https://packages.adoptium.net/artifactory/deb $(awk -F= '/^VERSION_CODENAME/{print$2}' /etc/os-release) main" | tee /etc/apt/sources.list.d/adoptium.list
+
 
 RUN apt update 
 
